<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="8sp"
    tools:context=".auth.PhoneAuthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/your_mobile_number"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        android:layout_margin="5dp">

        <Spinner
            android:id="@+id/countryCode"
            android:layout_width="117dp"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <EditText
            android:id="@+id/phoneET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/number_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>

    <TextView
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_will_send_you_an_otp"/>

    <Button
        android:id="@+id/sendOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:background="@drawable/rounded_green_button"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>